deploiement/Stromae-V1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stromae
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stromae
  template:
    metadata:
      labels:
        app: stromae
    spec:
      containers:
        - name: stromae
          image: inseefr/stromae:1.Y.Z
          imagePullPolicy: Always
