deploiement/Stromae-V1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stromae
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: stromae
