deploiement/Stromae-V1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stromae
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stromae.example.com
  rules:
    - host: stromae.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stromae
                port:
                  name: http
